# nemotron-voice-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  examples_registry.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy-e2e.yml
benchmarking_tools/AA-BigBenchAudio-Eval/: README.md
client/: package-lock.json
docker/: docker-compose.chatterbox-tts.yaml  docker-compose.magpie-tts.yaml  docker-compose.nemotron-asr.yaml  docker-compose.nemotron3-nano.yaml  docker-compose.nemotron3-omni.yaml
docs/: 01-getting-started.md  02-configuration-guide.md  03-jetson-thor.md  04-best-practices.md  04-evaluation-and-performance.md  05-best-practices.md  05-nvidia-pipecat.md  06-evaluation-and-performance.md  06-troubleshooting.md  07-troubleshooting.md  README.md
notebooks/: brev_docker_launch.ipynb  brev_launchable.ipynb
src/: attachment_store.py  eval_bot.py  examples_registry.py  server.py  utils.py  webcam_frame_store.py
src/examples/webex_byova/client/: .gitignore  README.md  pyproject.toml
src/examples/webex_byova/client/cisco_webex_byova_adapter/: __init__.py  audio.py  auth.py  config.py  http_health.py  main.py  nemotron_bridge.py  service.py
src/examples/webex_byova/client/proto/: byova_common.proto  health.proto  voicevirtualagent.proto
src/examples/webex_byova/client/scripts/: run_external_adapter.sh  test_byova_client.py
src/examples/webex_byova/client/tests/: test_adapter.py
tests/: test_attachment_store.py  test_service_catalog.py  test_speaker_action_contract.py  test_subagent_controllers.py  test_webcam_steering.py
(+182 files in other folders)
